Libs added, old src deleted